--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">---- coming up ----</a>
+		<a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group October 17</a>
 <!--          <a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group September 12</a>-->
           <a class="dropdown-item" href="/events/gc-september-27.html#draft">LGHG Group Conscience September 27</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
