--- a/events/guidelines-working-group-september-12-info.html
+++ b/events/guidelines-working-group-september-12-info.html
@@ -30,7 +30,7 @@ Join Zoom Meeting
 https://zoom.us/j/6592039928?pwd=N2Nrc2lUaWhiNzNrK3NIMVBKajJuUT09
  
 Meeting ID: 659 203 9928
-Passcode: Traditions
+Passcode: 5444
 One tap mobile
 +16699006833,,6592039928#,,,,,,0#,,7587323814# US (San Jose)
 +12532158782,,6592039928#,,,,,,0#,,7587323814# US (Tacoma)
