add gc november and narathon event

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">---- coming up ----</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
-          <a class="dropdown-item" href="/events/gc-october-25.html#draft">LGHG Group Conscience October 25</a>
+          <a class="dropdown-item" href="/events/gc-november-29.html">LGHG Group Conscience November 29</a>
+          <a class="dropdown-item"
+          href="/events/narathon-working-group.html">Narathon Working Group 4th Sunday 7:15pm</a>
           <a class="dropdown-item" href="#">---- past events ----</a>
+          <a class="dropdown-item" href="/events/gc-october-25.html#draft">LGHG Group Conscience October 25</a>
 		<a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group October 17</a>
 <!--          <a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group September 12</a>-->
           <a class="dropdown-item" href="/events/gc-september-27.html#draft">LGHG Group Conscience September 27</a>
