remove old events

--- a/index.html
+++ b/index.html
@@ -58,24 +58,11 @@
        <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">---- coming up ----</a>
+<!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
+          <a class="dropdown-item" href="/events/narathon-working-group.html">Narathon Working Group 4th Sunday 7:15pm</a>
           <a class="dropdown-item" href="/events/gc-november-29.html">LGHG Group Conscience November 29</a>
-          <a class="dropdown-item"
-          href="/events/narathon-working-group.html">Narathon Working Group 4th Sunday 7:15pm</a>
-          <a class="dropdown-item" href="#">---- past events ----</a>
-          <a class="dropdown-item" href="/events/gc-october-25.html#draft">LGHG Group Conscience October 25</a>
-		<a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group October 17</a>
-<!--          <a class="dropdown-item" href="/events/guidelines-working-group-september-12-info.html#draft">LGHG Guidelines Working Group September 12</a>-->
-          <a class="dropdown-item" href="/events/gc-september-27.html#draft">LGHG Group Conscience September 27</a>
-          <a class="dropdown-item" href="/events/gc-august-23.html#draft">LGHG Group Conscience Meeting August 23</a>
-          <a class="dropdown-item" href="/events/gc-july-12.html#draft">LGHG Group Conscience Meeting July 12</a>
-          <a class="dropdown-item" href="/events/gc-june-14.html#draft">LGHG Group Conscience Meeting June 14</a>
-          <a class="dropdown-item" href="/events/gc-may-17.html#draft">LGHG Group Conscience Meeting May 17</a>
-          <a class="dropdown-item" href="/events/gc-april-19.html#draft">LGHG Group Conscience Meeting April 19</a>
-          <a class="dropdown-item" href="/events/how-to-run-a-meeting.html#draft">How to Run a Meeting April 18</a>
-          <a class="dropdown-item" href="/events/speakerjam.html#final">Speaker Jam April 7</a>
-          <a class="dropdown-item" href="/events/car-flyer-2020.jpeg">CAR Workshop April 4</a>
+<!--          <a class="dropdown-item" href="#">---- past events ----</a> -->
         </div>
       </li>
    <li class="nav-item dropdown">
