--- a/events/gc-november-29-info.html
+++ b/events/gc-november-29-info.html
@@ -34,7 +34,19 @@ Join Zoom Meeting
 
 Meeting ID: 879 0819 1815
 
+One tap mobile
++16699006833,,87908191815# US (San Jose)
++13462487799,,87908191815# US (Houston)
 
+Dial by your location
+        +1 669 900 6833 US (San Jose)
+        +1 346 248 7799 US (Houston)
+        +1 253 215 8782 US (Tacoma)
+        +1 301 715 8592 US (Germantown)
+        +1 312 626 6799 US (Chicago)
+        +1 929 205 6099 US (New York)
+Meeting ID: 879 0819 1815
+Find your local number: https://us02web.zoom.us/u/kyqej0wBp
 
 </pre>
 
