--- a/index.html
+++ b/index.html
@@ -59,12 +59,10 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
+          <a class="dropdown-item" href="/events/narathon.html">SJNA Holiday Narathon December 24</a>
           <a class="dropdown-item" href="/events/narathon-working-group.html">Narathon Working Group 4th Sunday 7:15pm</a>
           <a class="dropdown-item" href="/events/gc-december-20.html">LGHG Group Conscience December 20</a>
-          <a class="dropdown-item"
-	     href="/events/narathon.html">Holiday Narathon December
-	     24</a>
+          <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
 <!--          <a class="dropdown-item" href="#">---- past events ----</a> -->
         </div>
       </li>
