update narathon working group details

--- a/events/narathon-working-group.html
+++ b/events/narathon-working-group.html
@@ -25,11 +25,9 @@ body {
 
 The NArathon Working Group needs support.
 
-Meetings are on the 4th Sunday of every month at 7:15pm.
+Meetings are held Sundays at 7:15pm.
 
 Join us on zoom at <a href="https://us02web.zoom.us/j/4636395775">https://us02web.zoom.us/j/4636395775</a>.
-
-The group will start to meet more frequently.
 
 Stay tuned for more details
 
