--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="/events/narathon.html">SJNA Holiday Narathon December 24</a>
+          <a class="dropdown-item" href="/events/narathon.html">SJNA Holiday Narathon December 24/25</a>
           <a class="dropdown-item"
-          href="/events/narathon-signup.html">Signup for service for
+          href="/events/narathon-signup.html">Sign up for service for
           SJNA Holiday Narathon</a>
           <a class="dropdown-item" href="/events/narathon-working-group.html">Narathon Working Group Sundays at 7:15pm</a>
           <a class="dropdown-item" href="/events/gc-december-20.html">LGHG Group Conscience December 20</a>
