--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           <a class="dropdown-item" href="#"><b>18</b> meetings a week</a>
           <a class="dropdown-item" href="#"><b>countless</b> meetings to date</a>
           <a class="dropdown-item" href="#">---- Online Meetings ----</a>
-          <!--                ONLINE STATS UPDATED AFTER FRIDAY MAY 15 6AM MEETING   -->
-          <a class="dropdown-item" href="#"><b>60</b> days in operation</a>
-          <a class="dropdown-item" href="#"><b>186</b> meetings to date</a>
-          <a class="dropdown-item" href="#"><b>10027</b> attendees</a>
+          <!--                ONLINE STATS UPDATED AFTER FRIDAY DECEMBER 6 NOON MEETING   -->
+          <a class="dropdown-item" href="#"><b>260</b> days in operation</a>
+          <a class="dropdown-item" href="#"><b>740</b> meetings to date</a>
+          <a class="dropdown-item" href="#"><b>Over 25000</b> attendees</a>
           <a class="dropdown-item" href="#">-------------</a>
           <a class="dropdown-item" href="testimonials.txt">Testimonials</a>
         </div>
