--- a/events/narathon-working-group.html
+++ b/events/narathon-working-group.html
@@ -27,9 +27,10 @@ The NArathon Working Group needs support.
 
 Meetings are held Sundays at 7:15pm.
 
-Join us on zoom at <a href="https://us02web.zoom.us/j/4636395775">https://us02web.zoom.us/j/4636395775</a>.
+Join us on zoom at <a href="https://us02web.zoom.us/j/89049152357?pwd=enJFbWlzVHlybStiZUhqWVBYdzZ4UT09"</a>.
 
-Stay tuned for more details
+Meeting ID: 890 4915 2357
+Passcode: 526149
 
 </pre>
 
