--- a/events/narathon-working-group.html
+++ b/events/narathon-working-group.html
@@ -27,7 +27,7 @@ The NArathon Working Group needs support.
 
 Meetings are held Sundays at 7:15pm.
 
-Join us on zoom at <a href="https://us02web.zoom.us/j/89049152357?pwd=enJFbWlzVHlybStiZUhqWVBYdzZ4UT09"</a>.
+Join us on zoom at <a href="https://us02web.zoom.us/j/89049152357?pwd=enJFbWlzVHlybStiZUhqWVBYdzZ4UT09">https://us02web.zoom.us/j/89049152357?pwd=enJFbWlzVHlybStiZUhqWVBYdzZ4UT09</a>.
 
 Meeting ID: 890 4915 2357
 Passcode: 526149
