--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!--          <a class="dropdown-item"
           href="/events/narathon-signup.html">Sign up for service for
           SJNA Holiday Narathon</a>-->
-          <a class="dropdown-item" href="/events/narathon-working-group.html">Narathon Working Group Sundays at 7:15pm</a>
+<!--          <a class="dropdown-item" href="/events/narathon-working-group.html">Narathon Working Group Sundays at 7:15pm</a> -->
           <a class="dropdown-item" href="/events/gc-december-20.html">LGHG Group Conscience December 20</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
 <!--          <a class="dropdown-item" href="#">---- past events ----</a> -->
