next gc meeting, na unplugged

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="/events/gc-january-31.html">LGHG Group Conscience January 31</a>
+          <a class="dropdown-item" href="/events/gc-february-28.html">LGHG Group Conscience February 28</a>
+          <a class="dropdown-item" href="/events/NA_Unplugged.png">NA Unplugged April 3</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
 <!--          <a class="dropdown-item" href="#">---- past events ----</a> -->
         </div>
