--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
           <a class="dropdown-item" href="/events/gc-february-28.html">LGHG Group Conscience February 28</a>
-          <a class="dropdown-item" href="/events/NA_Unplugged.png">NA Unplugged April 3</a>
+          <a class="dropdown-item" href="/events/spirit-of-unity.jpg">In the Spirit of Unity April 2-3</a>
+          <a class="dropdown-item" href="/events/NA_Unplugged.png">NA Unplugged Auditions</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
 <!--          <a class="dropdown-item" href="#">---- past events ----</a> -->
         </div>
