more matt updates

--- a/m.html
+++ b/m.html
@@ -113,7 +113,7 @@
 	    <br />
 
 <a href="matt/memorial-info.html">
-<img width="50%" src="matt/matt-t-homepage.png">
+<img width="50%" src="matt/matt-t-no-logo.png">
 </a>
 <br />
 
