--- a/matt/memorial-info.html
+++ b/matt/memorial-info.html
@@ -26,8 +26,9 @@ body {
 <b>Saturday February 27, 2021 2PM Pacific Time (US and Canada)</b>
 
 Join Zoom Meeting
+<a href="https://us02web.zoom.us/j/85444276061?pwd=bHF3VGo5Z0QxeDRLL1ZhZ1M3NllqUT09">
 https://us02web.zoom.us/j/85444276061?pwd=bHF3VGo5Z0QxeDRLL1ZhZ1M3NllqUT09
-
+</a>
 Meeting ID: 854 4427 6061
 Passcode: remember
 One tap mobile
