--- a/m.html
+++ b/m.html
@@ -112,6 +112,18 @@
     <div class="container">
 	    <br />
 
+	    <center>
+	      <img src="matt/matt.png">
+	      <br />
+	      <br />
+	      <p>A Memorial Service will be held for Matt T
+		a beloved member of Los Gatos Home Group</p>
+	      <br />
+	      <br />
+	      <img src="matt/candle.png"><br>
+
+
+
 <a href="matt/memorial-info.html">
 <img width="50%" src="matt/matt-t-no-logo.png">
 </a>
