--- a/matt/index.html
+++ b/matt/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body bgcolor="black">
-	<a href="matt/memorial-info.html">
-	<img width="70%" src="matt-t-homepage.png"></a>
+	<a href="memorial-info.html">
+	<img width="70%" src="matt-announce.png"></a>
 </body>
 </html>
