--- a/m.html
+++ b/m.html
@@ -112,25 +112,15 @@
     <div class="container">
 	    <br />
 
-	    <center>
-	      <img src="matt/matt.png">
-	      <br />
-	      <br />
-	      <p>A Memorial Service will be held for Matt T
-		a beloved member of Los Gatos Home Group</p>
-	      <br />
-	      <br />
-	      <img src="matt/candle.png"><br>
+      <img width="300" src="images/lghg-30-logo.png"> 
+<br /><br />
 
-
-
-<a href="matt/memorial-info.html">
+<a href="matt/index.html">
 <img width="50%" src="matt/matt-t-no-logo.png">
 </a>
 <br />
 
 
-<!--      <img width="300" src="images/lghg-30-logo.png"> -->
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
