--- a/matt/memorial-info.html
+++ b/matt/memorial-info.html
@@ -23,14 +23,14 @@ body {
 <h2>In Memory of Matt T</h2>
 <pre>
 
-<b>Saturday February 27, 2021 2PM Pacific Time (US and Canada)</b>
+<b>Sunday February 28, 2021 11:00 AM Pacific Time</b>
+
+Sunday February 28, 2021 11:00 AM Pacific Time
 
 Join Zoom Meeting
-<a href="https://us02web.zoom.us/j/85444276061?pwd=bHF3VGo5Z0QxeDRLL1ZhZ1M3NllqUT09">
-https://us02web.zoom.us/j/85444276061?pwd=bHF3VGo5Z0QxeDRLL1ZhZ1M3NllqUT09
-</a>
+<a href="https://us02web.zoom.us/j/85444276061">https://us02web.zoom.us/j/85444276061</a>
+
 Meeting ID: 854 4427 6061
-Passcode: remember
 One tap mobile
 +16699006833,,85444276061# US (San Jose)
 +13462487799,,85444276061# US (Houston)
@@ -44,6 +44,7 @@ Dial by your location
         +1 301 715 8592 US (Washington DC)
 Meeting ID: 854 4427 6061
 Find your local number: https://us02web.zoom.us/u/kcB9fL7b4Q
+
 
 
 </pre>
