--- a/m.html
+++ b/m.html
@@ -116,7 +116,7 @@
 <br /><br />
 
 <a href="matt/index.html">
-<img width="50%" src="matt/matt-t-no-logo.png">
+<img width="80" src="matt/matt-t-no-logo.png">
 </a>
 <br />
 
