--- a/service/index.html
+++ b/service/index.html
@@ -1,4 +1,4 @@
 <head>
-  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/e/1FAIpQLScGA3V3RxXi3BmwGu7nEp2pap-5SyUo0DRrGdKRmepayMLZBQ/viewform">
+  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/e/1FAIpQLScv0bHdfmldpeVis5vIa0TjLGxTYKs8Z_G2CpF2zd6rSWzYBw/viewform?usp=sf_link">
 </head>
 
