--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <a class="dropdown-item" target="script" href="http://na-in-place.org/resources/script.html">Secretary Script</a>
           <a class="dropdown-item" target="readings" href="http://na-in-place.org/readings/">Readings</a>
           <a class="dropdown-item" target="chimes" href="http://na-in-place.org/resources/chimes/">Timer and Chimes</a>
+          <a class="dropdown-item" target="wrap" href="http://na-in-place.org/images/pleasewrap.png/">Please Wrap</a>
           <a class="dropdown-item" target="chat" href="http://na-in-place.org/resources/chat-announcements.html">Chat Announcements</a>
           <a class="dropdown-item" target="meetingsheet" href="http://na-in-place.org/resources/MeetingSheet.pdf">Meeting Sheet</a>
           <a class="dropdown-item" target="concepts" href="https://na.org/admin/include/spaw2/uploads/pdf/litfiles/us_english/Booklet/Twelve%20Concepts.pdf">Twelve Concepts</a>
