--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="/events/gc-may-2.html">LGHG Group Conscience May 2</a>
+          <a class="dropdown-item" href="/events/nextgc.html">LGHG Group Conscience May 30</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
         </div>
       </li>
