monday noon suspended

--- a/index.html
+++ b/index.html
@@ -131,8 +131,11 @@
       <div class="col-md-4">
 <a name="meetings"><h2>Meeting Schedule</h2></a>
         <p>Prior to the Shelter in Place we held 19 meetings a week at <a target="lgmap" href="https://goo.gl/maps/i2y5jmrqyKc7fjFg9">our meeting place in Los Gatos, California</a>. We now hold the same number of meetings online. </p>
-  <p><b>Monday through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
+  <p><b>Monday* through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
         <p><b>Saturday and Sunday:<br />9AM and 6PM Pacific Time</b></p>
+
+        <p><b>*Note for the time being the Monday noon meeting has been suspended until we are able to find trusted servants to host and secretary this meeting.</b></p>
+
         <p>The following four meetings are listed in the global <a href="https://virtual-na.org/">Virtual NA Directory</a> and typically have higher attendance with participants from around the globe:</p>
   <b>Tuesday 6am Pacific Time<br />
         Thursday 6am Pacific Time<br />
