add suspended message

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <a class="dropdown-item" target="chimes" href="http://na-in-place.org/resources/chimes/">Timer and Chimes</a>
           <a class="dropdown-item" target="wrap" href="http://na-in-place.org/images/pleasewrap.png">Please Wrap</a>
           <a class="dropdown-item" target="chat" href="http://na-in-place.org/resources/chat-announcements.html">Chat Announcements</a>
+          <a class="dropdown-item" target="suspendedsheet" href="http://lghg.org/events/suspended.html">Meeting Suspended</a>
           <a class="dropdown-item" target="meetingsheet" href="http://na-in-place.org/resources/MeetingSheet.pdf">Meeting Sheet</a>
           <a class="dropdown-item" target="concepts" href="https://na.org/admin/include/spaw2/uploads/pdf/litfiles/us_english/Booklet/Twelve%20Concepts.pdf">Twelve Concepts</a>
           <a class="dropdown-item" target="literature" href="http://m.na.org/?ID=ips-eng-index">Recovery Literature</a>
