add survey to home page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
           font-size: 3.5rem;
         }
       }
+      #announce {
+          width:900px;
+      /*    margin:0 auto;*/
+          text-align:left;
+          font-weight:bold;
+          background:#CCE5FF;
+}
     </style>
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -115,6 +122,11 @@
       <img width="300" src="images/lghg-30-logo.png"> 
 <br /><br />
 
+      <br />
+      <br />
+<div id="announce">
+      <p><b>Los Gatos Home Group is exploring the transition from online to a combination of in-person, online, or hybrid meetings. As members of this Home group, we need your input on the format of the meetings. <br /><br />Please fill out the survey at <a href="https://lghg.org/survey/">lghg.org/survey</a>.</b></p>
+</div>
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
