updates from august 1 GC

--- a/survey/index.html
+++ b/survey/index.html
@@ -1,4 +1,4 @@
 <head>
-  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/e/1FAIpQLSfPqa-PKqvLDBYyrUPhj-9ew8xE65GOwH2Oi5jzEJZ2lbE1eg/viewform?usp=sf_link">
+  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/1cwHUbPDWF-aTWzP7ZpUCxphiDESo-NjEiWPlbRuoSdQ/edit">
 </head>
 
