service form on homepage

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <br />
       <br />
 <div id="announce">
-      <p><b>Los Gatos Home Group is exploring the transition from online to a combination of in-person, online, or hybrid meetings. As members of this Home group, we need your input on the format of the meetings. <br /><br />Please fill out the survey at <a href="https://lghg.org/survey/">lghg.org/survey</a>.</b></p>
+      <p><b>All secretary positions are up for election in August. Please sign up at https://lghg.org/service/ </b></p>
 </div>
       <br />
       <br />
