cancel tuesday meeting

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <p><b>Monday* through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
         <p><b>Saturday and Sunday:<br />9AM and 6PM Pacific Time</b></p>
 
-        <p><b>*Note for the time being the Monday noon meeting has been suspended until we are able to find trusted servants to host and secretary this meeting.</b></p>
+        <p><b>*Note for the time being both the Monday noon and Tuesday noon meetings have been suspended as we have been unable to find trusted servants to host and secretary these meetings.</b></p>
 
         <p>The following four meetings are listed in the global <a href="https://virtual-na.org/">Virtual NA Directory</a> and typically have higher attendance with participants from around the globe:</p>
   <b>Tuesday 6am Pacific Time<br />
