--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <br />
       <br />
 <div id="announce">
-      <p><b>All secretary positions are up for election in August. Please sign up at https://lghg.org/service/ </b></p>
+      <p><b>All secretary positions are up for election in August. Please sign up at <a href="https://lghg.org/service/">https://lghg.org/service/</a></b></p>
 </div>
       <br />
       <br />
