--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
 
       <br />
       <br />
+<!--
 <div id="announce">
       <p><b>All secretary positions are up for election in August. Please sign up at <a href="https://lghg.org/service/">lghg.org/service</a></b></p>
 </div>
+-->
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
@@ -147,7 +149,7 @@
   <p><b>Monday* through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
         <p><b>Saturday and Sunday:<br />9AM and 6PM Pacific Time</b></p>
 
-        <p><b>*Note for the time being both the Monday noon and Tuesday noon meetings have been suspended as we have been unable to find trusted servants to host and secretary these meetings.</b></p>
+        <p><b>*Note for the time being the Monday, Tuesday and Wednesday noon meetings have been suspended as we have been unable to find trusted servants to host and secretary these meetings.</b></p>
 
         <p>The following four meetings are listed in the global <a href="https://virtual-na.org/">Virtual NA Directory</a> and typically have higher attendance with participants from around the globe:</p>
   <b>Tuesday 6am Pacific Time<br />
@@ -180,7 +182,7 @@
 </main>
 
 <footer class="container">
-  <p>&copy; 2020 Los Gatos Home Group</p>
+  <p>&copy; 2021 Los Gatos Home Group</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
