--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="row">
       <div class="col-md-4">
 <a name="meetings"><h2>Meeting Schedule</h2></a>
-        <p>Prior to the Shelter in Place we held 19 meetings a week at <a target="lgmap" href="https://goo.gl/maps/i2y5jmrqyKc7fjFg9">our meeting place in Los Gatos, California</a>. We now hold the same number of meetings online. </p>
+        <p>Prior to the Shelter in Place we held 19 meetings a week. We now hold the same number of meetings online. </p>
   <p><b>Monday* through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
         <p><b>Saturday and Sunday:<br />9AM and 6PM Pacific Time</b></p>
 
