update # of meetings

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <a class="dropdown-item" href="#"><b>countless</b> meetings to date</a>
           <a class="dropdown-item" href="#">---- Online Meetings ----</a>
           <!--                ONLINE STATS UPDATED AFTER FRIDAY DECEMBER 6 NOON MEETING   -->
-          <a class="dropdown-item" href="#"><b>365</b> days in operation</a>
-          <a class="dropdown-item" href="#"><b>1200</b> meetings to date</a>
-          <a class="dropdown-item" href="#"><b>Over 30000</b> attendees</a>
+          <a class="dropdown-item" href="#"><b>1 year 6 months</b> days in operation</a>
+          <a class="dropdown-item" href="#"><b>1800</b> meetings to date</a>
+          <a class="dropdown-item" href="#"><b>Over 40000</b> attendees</a>
           <a class="dropdown-item" href="#">-------------</a>
           <a class="dropdown-item" href="testimonials.txt">Testimonials</a>
         </div>
@@ -145,7 +145,7 @@
     <div class="row">
       <div class="col-md-4">
 <a name="meetings"><h2>Meeting Schedule</h2></a>
-        <p>Prior to the Shelter in Place we held 19 meetings a week. We now hold the same number of meetings online. </p>
+        <p>Prior to the Shelter in Place we held 19 meetings a week. We now hold (almost) the same number of meetings online. </p>
   <p><b>Monday* through Friday:<br />6AM, 12 Noon, and 6PM Pacific Time</b></p>
         <p><b>Saturday and Sunday:<br />9AM and 6PM Pacific Time</b></p>
 
