announce in-person meetings

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
           font-weight:bold;
           background:#CCE5FF;
 }
+      #banner-image {
+          width:450px;
+          text-align:left;
+          font-weight:bold;
+}
     </style>
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -124,11 +129,9 @@
 
       <br />
       <br />
-<!--
-<div id="announce">
-      <p><b>All secretary positions are up for election in August. Please sign up at <a href="https://lghg.org/service/">lghg.org/service</a></b></p>
+<div id="banner-image">
+<img width="450" src="events/in-person.png">
 </div>
--->
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
