add narathon to front page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
       <br />
       <br />
 <div id="banner-image">
-<img width="450" src="events/in-person.png">
+<a href="https://zoom.us/j/2588494778">
+<img width="450" src="events/narathon.png">
+</a>
 </div>
       <br />
       <br />
