add meeting schedule

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <br />
       <br />
 <div id="banner-image">
-<a href="https://zoom.us/j/2588494778">
-<img width="450" src="events/narathon.png">
+<a href="https://zoom.us/j/526022691">
+<img width="550" src="images/meeting-schedule.png">
 </a>
 </div>
       <br />
