announce emergency GC

--- a/index.html
+++ b/index.html
@@ -131,11 +131,15 @@
 
       <br />
       <br />
+	    <b>
+		    LGHG will have abn energency group conscience meeting t 10AM immediately following the 9AM on Sunday January 9. Due to the increase in Covid-19 cases and a potential exposure, we will discuss whether to continue in-person meetings ta this time. <br/><br />
+		    Please join this meeting via Zoom at this link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
+	    <!--
 <div id="banner-image">
 <a href="https://zoom.us/j/526022691">
 <img width="550" src="images/meeting-schedule.png">
 </a>
-</div>
+</div>-->
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
