--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <br />
       <br />
 	    <b>
-		    LGHG will have abn energency group conscience meeting t 10AM immediately following the 9AM on Sunday January 9. Due to the increase in Covid-19 cases and a potential exposure, we will discuss whether to continue in-person meetings at this time. <br/><br />
+		    LGHG will have an energency group conscience meeting at 10AM immediately following the 9AM on Sunday January 9. Due to the increase in Covid-19 cases and a potential exposure, we will discuss whether to continue in-person meetings at this time. <br/><br />
 		    Please join this meeting via Zoom at this link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
 	    <!--
 <div id="banner-image">
