Announce in-person meeting suspension

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <br />
       <br />
 	    <b>
-		    LGHG will have an energency group conscience meeting at 10AM immediately following the 9AM on Sunday January 9. Due to the increase in Covid-19 cases and a potential exposure, we will discuss whether to continue in-person meetings at this time. <br/><br />
-		    Please join this meeting via Zoom at this link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
+		    Due to concerns about the recent spike in Covid-19 cases, Los Gatos Home Group will temporarily suspend all in-person and hybrid meetings. 
+		    Until further notice, the Monday 6PM hybrid meeting, and the Sunday 6PM and Wednesday 6PM meetings will be held on Zoom only on this Zoom link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
 	    <!--
 <div id="banner-image">
 <a href="https://zoom.us/j/526022691">
