--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 	    <b>
 		    Due to concerns about the recent spike in Covid-19 cases, Los Gatos Home Group will temporarily suspend all in-person and hybrid meetings. 
 		    Until further notice, the Monday 6PM hybrid meeting, and the Sunday 6PM and Wednesday 6PM meetings will be held on Zoom only on this Zoom link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
-	    <!--
+
 <div id="banner-image">
 <a href="https://zoom.us/j/526022691">
 <img width="550" src="images/meeting-schedule.png">
 </a>
-</div>-->
+</div>
       <br />
       <br />
       <p>Welcome to Los Gatos Home Group</p>
