--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		    Until further notice, the Monday 6PM hybrid meeting, and the Sunday 6PM and Wednesday 6PM meetings will be held on Zoom only on this Zoom link: <a href="https://zoom.us/j/526022691">https://zoom.us/j/526022691</a>. </b>
 <br /><br />
 <b>
-THERE WAS A POTENTIAL COVID EXPOSURE AT OUR SUNDAY 6PM MEETING ON 1/2/2022. IF YOU WERE IN ATTENDANCE AT THAT MEETING AND/OR YOU ARE EXPERIENCING SYMPTOMS WE WOULD ENCOURAGE YOU TO FOLLOW THE GUIDANCE OF THE CDC AND LOCAL AUTHORITIES AND GET TESTED.
+THERE WAS A POTENTIAL COVID EXPOSURE AT OUR SUNDAY 6PM MEETING ON 1/2/2022. IF YOU WERE IN ATTENDANCE AT THIS MEETING AND/OR YOU ARE EXPERIENCING SYMPTOMS WE ENCOURAGE YOU TO FOLLOW THE GUIDANCE OF THE CDC AND LOCAL AUTHORITIES AND GET TESTED.
 
 </b>
 <br />
