--- a/readings/index.html
+++ b/readings/index.html
@@ -28,15 +28,15 @@
 <br /><br /><br /><br /><br /><br /><br /><br />
 <a name="serenity"><img width="850" src="serenity.png"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="what"><img width="750" src="what.jpg"></a>
+<a name="what"><img width="850" src="what.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="who"><img width="750" src="who.png"></a>
+<a name="who"><img width="850" src="who.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="why"><img width="750" src="why.png"></a>
+<a name="why"><img width="850" src="why.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="we"><img src="we.png"></a>
+<a name="we"><img width="850" src="we.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="how"><img width="850" src="how.jpg"></a>
+<a name="how"><img width="850" src="how.jpg"></a><br />
 <a name="how2"><img width="850" src="how2.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
 <a name="traditions1-gray"><img width="850" src="traditions1-gray.jpg"><br /></a>
@@ -47,7 +47,7 @@
 <a href="https://jftna.org/jft/"><img width="450" src="jftbook.png"><br />
 <span  style="color:#008080">(click for today's reading)</span></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
-<a name="just"><img width="850" src="just.png"></a>
+<a name="just"><img width="850" src="just.jpg"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
 <a name="third-step-prayer"><img width="850" src="third-step-prayer.png"></a>
 <br /><br /><br /><br /><br /><br /><br /><br />
