--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="/events/nextgc.html">LGHG Group Conscience March 27</a>
+          <a class="dropdown-item" href="events/nextgc.html">LGHG Group Conscience March 27</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
         </div>
       </li>
    <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" target="meeting-script" href="http://na-in-place.org/resources/meeting-script.pdf">Meeting Script</a>
-          <a class="dropdown-item" target="locked-meeting-script" href="http://na-in-place.org/resources/locked-meeting-script.pdf">Locked Meeting Script</a>
-          <a class="dropdown-item" target="script" href="http://na-in-place.org/resources/script.html">Secretary Script</a>
-          <a class="dropdown-item" target="readings" href="http://na-in-place.org/readings/">Readings</a>
-          <a class="dropdown-item" target="chimes" href="http://na-in-place.org/resources/chimes/">Timer and Chimes</a>
-          <a class="dropdown-item" target="wrap" href="http://na-in-place.org/images/pleasewrap.png">Please Wrap</a>
-          <a class="dropdown-item" target="chat" href="http://na-in-place.org/resources/chat-announcements.html">Chat Announcements</a>
-          <a class="dropdown-item" target="suspendedsheet" href="http://lghg.org/events/suspended.html">Meeting Suspended</a>
-          <a class="dropdown-item" target="meetingsheet" href="http://na-in-place.org/resources/MeetingSheet.pdf">Meeting Sheet</a>
+          <a class="dropdown-item" target="meeting-script" href="resources/meeting-script.pdf">Meeting Script</a>
+          <a class="dropdown-item" target="locked-meeting-script" href="resources/locked-meeting-script.pdf">Locked Meeting Script</a>
+          <a class="dropdown-item" target="script" href="resources/script.html">Secretary Script</a>
+          <a class="dropdown-item" target="readings" href="readings/">Readings</a>
+          <a class="dropdown-item" target="chimes" href="resources/chimes/">Timer and Chimes</a>
+          <a class="dropdown-item" target="wrap" href="images/pleasewrap.png">Please Wrap</a>
+          <a class="dropdown-item" target="chat" href="resources/chat-announcements.html">Chat Announcements</a>
+          <a class="dropdown-item" target="suspendedsheet" href="events/suspended.html">Meeting Suspended</a>
+          <a class="dropdown-item" target="meetingsheet" href="resources/MeetingSheet.pdf">Meeting Sheet</a>
           <a class="dropdown-item" target="concepts" href="https://na.org/admin/include/spaw2/uploads/pdf/litfiles/us_english/Booklet/Twelve%20Concepts.pdf">Twelve Concepts</a>
           <a class="dropdown-item" target="literature" href="http://m.na.org/?ID=ips-eng-index">Recovery Literature</a>
 
