In-Person Secretaries and Co-Hosts

--- a/resources/announcements.html
+++ b/resources/announcements.html
@@ -34,7 +34,7 @@ We will be starting in person meetings again at Faith Lutheran Church, 16548 Fer
 and on Tuesday, March 22, at 6 a.m. These meetings will continue to be hosted online also.
 </b></p>
 <p><b>
-Los Gatos Home Group needs online meeting hosts and cohosts for Monday, Wednesday, Thursday, and Saturday 6 p.m. meetings. 
+Los Gatos Home Group needs in-person meeting secretaries and cohosts for Monday, Wednesday, Thursday, and Saturday 6 p.m. meetings.
 If we don’t get secretaries and hosts, we will have to shut down these meetings.
 You need three months clean time, a computer, and the ability to learn Zoom. We will provide training to get you started.
 To be a host or cohost, email your contact info and availability to lghg.service@gmail.com.
