--- a/resources/script.html
+++ b/resources/script.html
@@ -133,22 +133,24 @@ and your clean date. Please raise your hand in Zoom and I will call on you. <b><
 </b></p>
 
 <p><b>
-We will be starting in person meetings again at Faith Lutheran Church, 16548 Ferris Ave, Los Gatos, CA 95032,  on Sunday, March 20, at 6 p.m., 
-and on Tuesday, March 22, at 6 a.m. These meetings will continue to be hosted online also.
+We have started in person/hybrid meetings again for our Sunday 6pm and Tuesday 6am meetings. Join us in person at Faith Lutheran Church, 
+        16548 Ferris Ave, Los Gatos, CA 95032.
 </b></p>
 <p><b>
-Los Gatos Home Group needs in-person meeting secretaries and cohosts for Monday, Wednesday, Thursday, and Saturday 6 p.m. meetings.
-If we don’t get secretaries and hosts, we will have to shut down these meetings.
-You need three months clean time, a computer, and the ability to learn Zoom. We will provide training to get you started.
-To be a host or cohost, email your contact info and availability to lghg.service@gmail.com.
+Looking for a service position? Want to give back to LGHG? We are looking for an Alternate GSR, Assistant Recording Secretary, 
+        Supply Coordinator, and a couple of Secretary positions. Come to our next Group Conscience meeting on Sunday May 1 at 3pm 
+        to volunteer for service. Details can be found at www.lghg.org.
 </b></p>
 <p><b>
-We also have additional service positions open including Alternate GSR, Assistant Recording Secretary, and several meeting secretaries.
-To sign up for these please attend our next Group Conscience meeting on Sunday March 27 at 3pm.
+LGHG is always on the lookout for computer savvy members that want to help host and co-host to keep the meeting doors open and 
+        foster an environment of serenity. If you have at least 3 months clean time, a computer, and the ability to learn Zoom. 
+        We will provide training to get you started. If you’re ready to step up your recovery through service, email your contact 
+        info and availability to lghg.service@gmail.com.
 </b></p>
 
 <p><b>
-NCCNA Convention will be held in Santa Clara on April 14th through April 17th. Volunteers are needed for this event.  See NCCNA.ORG for details.
+NCCNA - The Northern California Convention of Narcotics Anonymous - will be held in Santa Clara on April 14th through April 17th. 
+        Volunteers are needed for this event. See NCCNA.ORG for details.
 </b></p>
 
 <p>
