--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
           <a class="dropdown-item" href="testimonials.txt">Testimonials</a>
         </div>
       </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tutorials</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="#">---- Video Tutorials ----</a>
+          <a class="dropdown-item" href="/tutorials/host.mp4#">How to Host a Meeting</a>
+          <a class="dropdown-item" href="/tutorials/cohost.mp4#">How to Cohost a Meeting</a>
+          <a class="dropdown-item" href="/images/secretary-vid.png">How to Secretary a Meeting</a>
+          <a class="dropdown-item" href="/tutorials/bombers.mp4#">Zoom Bombing</a>
+
+        </div>
+      </li>
       <li class="nav-item">
         <a class="nav-link" target="contribute"
         href="/docs/seventh.html">Contribute 7th Tradition</a>
