Next GC and Recording Secretary

--- a/resources/script.html
+++ b/resources/script.html
@@ -137,8 +137,8 @@ We have started in person/hybrid meetings again for our Sunday 6pm and Tuesday 6
         16548 Ferris Ave, Los Gatos, CA 95032.
 </b></p>
 <p><b>
-Looking for a service position? Want to give back to LGHG? We are looking for an Alternate GSR, Assistant Recording Secretary, 
-        Supply Coordinator, and a couple of Secretary positions. Come to our next Group Conscience meeting on Sunday May 1 at 3pm 
+Looking for a service position? Want to give back to LGHG? We are looking for an Alternate GSR, Recording Secretary, 
+        Supply Coordinator, and a couple of Secretary positions. Come to our next Group Conscience meeting on Sunday May 29 at 3pm 
         to volunteer for service. Details can be found at www.lghg.org.
 </b></p>
 <p><b>
