--- a/resources/announcements.html
+++ b/resources/announcements.html
@@ -30,8 +30,9 @@ body {
 <div id="announce" style=background:#CCE5FF>
 
 <p><b>
-We have started in person/hybrid meetings again for our Sunday 6pm and Tuesday 6am meetings. Join us in person at Faith Lutheran Church, 
-        16548 Ferris Ave, Los Gatos, CA 95032.
+Join us in person on Sundays at 6pm or Tuesdays at 6am for hybrid meetings. On Thursdays at 6am, members have the option to join our 
+	online meeting or an in-person-only meeting. Join us in person at Faith Lutheran Church, 
+        16548 Ferris Ave, Los Gatos, CA 95032. Additional details can be found at lghg.org.
 </b></p>
 <p><b>
 Looking for a service position? Want to give back to LGHG? We are looking for an Alternate GSR, Recording Secretary, 
@@ -43,6 +44,13 @@ LGHG is always on the lookout for computer savvy members that want to help host 
         foster an environment of serenity. If you have at least 3 months clean time, a computer, and the ability to learn Zoom. 
         We will provide training to get you started. If you’re ready to step up your recovery through service, email your contact 
         info and availability to lghg.service@gmail.com.
+</b></p>
+<p><b>
+We have books for sale at cost. There are meeting guides and other literature free for the taking.
+</b></p>
+<p><b>
+There is also a Los Gatos Home Group Phone List available, and we encourage all to take one. If you have six months clean and 
+	would like to be added to the Los Gatos Home Group Phone List, please contact Anna Lynne. Their number is on the phone list.
 </b></p>
 
 <ul>
