Updated announcements per Riley

--- a/resources/script.html
+++ b/resources/script.html
@@ -133,27 +133,23 @@ and your clean date. Please raise your hand in Zoom and I will call on you. <b><
 </b></p>
 
 <p><b>
-Join us in person on Sundays at 6pm or Tuesdays at 6am for hybrid meetings. On Thursdays at 6am, members have the option to join our 
-	online meeting or an in-person-only meeting. Join us in person at Faith Lutheran Church, 
-        16548 Ferris Ave, Los Gatos, CA 95032. Additional details can be found at lghg.org.
+On Sundays at 6pm and Tuesdays at 6am we have hybrid meetings. On Thursdays at 6am, members have the option to join our online meeting 
+	or an in-person-only meeting. All other meetings are online. Join us in person at Faith Lutheran Church in Los Gatos. Additional 
+	details can be found at lghg.org.
 </b></p>
 <p><b>
-Looking for a service position? Want to give back to LGHG? We are looking for an Alternate GSR, Recording Secretary, 
-        Supply Coordinator, and a couple of Secretary positions. Come to our next Group Conscience meeting on Sunday May 29 at 3pm 
-        to volunteer for service. Details can be found at www.lghg.org.
+If you want to pick up a medallion or key tag in-person with this group, we celebrate milestones in recovery the second Sunday of the 
+	month at the 6 p.m. meeting.
 </b></p>
 <p><b>
-LGHG is always on the lookout for computer savvy members that want to help host and co-host to keep the meeting doors open and 
-        foster an environment of serenity. If you have at least 3 months clean time, a computer, and the ability to learn Zoom. 
-        We will provide training to get you started. If you’re ready to step up your recovery through service, email your contact 
-        info and availability to lghg.service@gmail.com.
-</b></p>
+We are currently looking to fill the following service positions: Alternate GSR, Recording Secretary, Supply Coordinator, and several 
+	Secretary positions. Come to our next Group Conscience meeting on Sunday May 29 at 3pm to volunteer for service. Details can be 
+	found at lghg.org.
+</p></b>
 <p><b>
-We have books for sale at cost. There are meeting guides and other literature free for the taking.
-</b></p>
-<p><b>
-There is also a Los Gatos Home Group Phone List available, and we encourage all to take one. If you have six months clean and 
-	would like to be added to the Los Gatos Home Group Phone List, please contact Anna Lynne. Their number is on the phone list.
+We also are looking for members that want to help host and co-host our meetings. If you have at least 3 months clean time, a computer, 
+	and the ability to learn Zoom, we will provide training to get you started. If you’re interested, email your contact info and 
+	availability to lghg.service@gmail.com.
 </b></p>
 
 <p>
