--- a/resources/announcements.html
+++ b/resources/announcements.html
@@ -30,18 +30,19 @@ body {
 <div id="announce" style=background:#CCE5FF>
 
 <p><b>
-On Sundays at 6pm and Tuesdays at 6am we have hybrid meetings. On Thursdays at 6am, members have the option to join our online meeting 
-	or an in-person-only meeting. All other meetings are online. Join us in person at Faith Lutheran Church in Los Gatos. Additional 
-	details can be found at lghg.org.
+On Sundays at 6pm and Tuesdays at 6am we have hybrid meetings. On Thursdays at 6am, we have both an online meeting and an in-person-only 
+	meeting to choose from. All other meetings are online. Join us in person at Faith Lutheran Church in Los Gatos.
 </b></p>
 <p><b>
 If you want to pick up a medallion or key tag in-person with this group, we celebrate milestones in recovery the second Sunday of the 
 	month at the 6 p.m. meeting.
 </b></p>
 <p><b>
-We are currently looking to fill the following service positions: Alternate GSR, Recording Secretary, Supply Coordinator, and several 
-	Secretary positions. Come to our next Group Conscience meeting on Sunday May 29 at 3pm to volunteer for service. Details can be 
-	found at lghg.org.
+We are currently looking to fill the following service positions: Alternate GSR and Recording Secretary. Come to our next Group Conscience 
+	meeting on Sunday June 26 at 3pm to volunteer for service. 
+</p></b>
+<p><b>
+Additional details for meetings and service opportunities can be found at lghg.org.
 </p></b>
 <p><b>
 We also are looking for members that want to help host and co-host our meetings. If you have at least 3 months clean time, a computer, 
